# batch-converter

./: Cargo.toml  README.md
src/: bin.rs  customError.rs  lib.rs
