[package]
name = "batch-converter"
version = "0.0.1"
authors = ["Alexander Chepurnov <inspired2@yandex.ru>"]
license = "MIT"

[lib]
name = "converter"
path = "src/lib.rs"

[[bin]]
name = "PNG_to_JPEG"
path = "src/bin.rs"

[dependencies]
image = "0.23.14"
rayon = "1.5.0"
[dev-dependencies]
cross = "0.2.1"
